=======
CHANGES
=======

Version 2.0.0 (2008-??-??)
--------------------------

- Refactoring: Templates now declare XML namespaces.

- Refactoring: HTML output is now compared using a modified version of
  the XML-aware output checker provided by ``lxml``.

- Feature: The `SequenceDataConverter` and `CollectionSequenceDataConverter`
  converter classes now ignore values that are not present in the terms when
  converting to a widget value.

- Feature: Add support for internationalization of z3c.form's messages.
  Added Russian, French, German and Chinese translations.

- Feature: The `TypeError` message used when a field does not provide
  ``IFormUnicode`` now also contains the type of the field.

- Feature: Implemented the `MultiWidget` widget. This widget allows to use
  simple fields like `ITextLine`, `IInt`, `IPassword`, etc. in a `IList` or
  `ITuple` sequence.

- Feature: Implemented `TextLinesWidget` widget. This widget offers a text
  area element and splits lines in sequence items. This is usfull for power
  user interfaces.  The widget can be used for sequence fields (e.g. `IList`)
  that specify a simple value type field (e.g. `ITextLine` or `IInt`).

- Bug: Use ``nocall:`` modifier in `orderedselect_input.pt` to avoid calling
  list entry if it is callable.

- Bug: Remove unused imports, adjust buildout dependencies in `setup.py`.


Version 1.9.0 (2008-08-26)
--------------------------

- Feature: Use the ``query()`` method in the widget manager to try extract a
  value. This ensures that the lookup is never failing, which is particularly
  helpful for dictionary-based data managers, where dictionaries might not
  have all keys.

- Feature: Changed the ``get()`` method of the data manager to throw an error
  when the data for the field cannot be found. Added ``query()`` method to
  data manager that returns a default value, if no value can be found.

- Feature: Deletion of widgets from field widget managers is now possible.
