@@ -9,6 +9,7 @@ $Id$
 """
 __docformat__ = "reStructuredText"
 
+import itertools
 import doctest
 import unittest
 
@@ -19,80 +20,82 @@ from z3c.form import testing
 def test_suite():
     checker = testing.OutputChecker()
 
-    return unittest.TestSuite((
+    tests = ((
         DocFileSuite('README.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('button.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('checkbox.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('file.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('file-testing.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('image.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('orderedselect.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('password.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('radio.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('select.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('submit.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('text.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('textarea.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('textlines.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
                      ),
         DocFileSuite('multi.txt',
-                     setUp=testing.setUp, tearDown=testing.tearDown,
+                     setUp=setUp, tearDown=testing.tearDown,
                      optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
                      checker=checker,
-                     ),
-        ))
+                     ))
+             for setUp in (testing.setUpZPT, testing.setUpZ3CPT))
+
+    return unittest.TestSuite(itertools.chain(*tests))
