@@ -19,6 +19,8 @@ __docformat__ = 'restructuredtext'
 import os
 import re
 import doctest
+import xml.parsers.expat
+
 import zope.component
 import zope.interface
 import zope.schema
@@ -32,9 +34,13 @@ from zope.security import checker
 from zope.app.testing import setup
 from zope.testing.doctest import register_optionflag
 
+from z3c.form import config
+from z3c.form import viewpagetemplatefile
 from z3c.form import browser, button, converter, datamanager, error, field
 from z3c.form import form, interfaces, term, validator, widget
 from z3c.form.browser import radio, select, text
+
+import z3c.pt
 
 import lxml.html
 import lxml.doctestcompare
@@ -139,6 +145,17 @@ def getPath(filename):
 
 def setUp(test):
     test.globs = {'root': setup.placefulSetUp(True)}
+
+def setUpZPT(suite):
+    config.PREFER_Z3C_PT = False
+    reload(viewpagetemplatefile)
+    setUp(suite)
+    
+def setUpZ3CPT(suite):
+    config.PREFER_Z3C_PT = True
+    reload(viewpagetemplatefile)
+    setUp(suite)
+    zope.configuration.xmlconfig.XMLConfig('configure.zcml', z3c.pt)()
 
 def setupFormDefaults():
     # Validator adapters
