@@ -5,6 +5,9 @@ CHANGES
 Version 2.0.0 (2008-??-??)
 --------------------------
 
+- Feature: Added support for ``z3c.pt``. Usage is switched on via the
+  "PREFER_Z3C_PT" environment variable. [malthe]
+
 - Refactoring: Templates now declare XML namespaces.
 
 - Refactoring: HTML output is now compared using a modified version of
